--- a/.github/workflows/bestagent-elera.yml
+++ b/.github/workflows/bestagent-elera.yml
@@ -17,16 +17,4 @@ jobs:
           script: |
             # 1. Обновляем код (форсированно)
             cd /var/www/PROJECT_ELERA
-            git fetch --all
-            git merge origin/main
-            pm2 delete frontend
-
-            # 3. Фронтенд (установка + сборка)
-            cd /var/www/PROJECT_ELERA/frontend
-            npm run build
-            
-            # 4. Перезапуск сервисов
-            pm2 serve /var/www/PROJECT_ELERA/frontend/build 3000 --name "frontend" --spa
-            pm2 save
-            
-            echo "✅ Деплой завершен за $(($SECONDS/60))m$(($SECONDS%60))s"
+            git pull origin main
